--- a/chat/index.html
+++ b/chat/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.bootcss.com/react/15.4.2/react.min.js"></script>
 	<script src="https://cdn.bootcss.com/react/15.4.2/react-dom.min.js"></script>
 	<script src="https://cdn.bootcss.com/babel-standalone/6.22.1/babel.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="chatApp.js"  type="text/babel"></script>
   </head>
   <body>
